@@ -1,18 +1,26 @@
 --- #YAML:1.0
-name:                Devel-Pillbug
-version:             0.005
-abstract:            ~
-license:             perl
-author:              
+name:               Devel-Pillbug
+version:            0.006
+abstract:           ~
+author:
     - Alex Ayars <pause@nodekit.org>
-generated_by:        ExtUtils::MakeMaker version 6.42
-distribution_type:   module
-requires:     
-    File::HomeDir:                 0.86
-    File::Type:                    0.22
-    HTTP::Server::Simple::Mason:   0.13
-    Net::Server:                   0.97
-    Test::More:                    0.86
+license:            perl
+distribution_type:  module
+configure_requires:
+    ExtUtils::MakeMaker:  0
+build_requires:
+    ExtUtils::MakeMaker:  0
+requires:
+    File::HomeDir:        0.86
+    HTTP::Server::Simple::Mason:  0.13
+    Media::Type::Simple:  0.02
+    Net::Server:          0.97
+    Test::More:           0.86
+no_index:
+    directory:
+        - t
+        - inc
+generated_by:       ExtUtils::MakeMaker version 6.55_02
 meta-spec:
-    url:     http://module-build.sourceforge.net/META-spec-v1.3.html
-    version: 1.3
+    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
+    version:  1.4
